Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    cert-manager.io/issuer: letsencrypt-staging
    cert-manager.io/acme-challenge-type: http01
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-webapp-service
            port:
              number: 80
    host: ingress.australiaeast.cloudapp.azure.com
  tls:
    - hosts:
      - ingress.australiaeast.cloudapp.azure.com
      secretName: frontend-tls
